api url attempted

--- a/templates/index.html
+++ b/templates/index.html
@@ -20,47 +20,47 @@
       
       <div class="col-4">
         <div class="row">
-          <button type="button" class="btn btn-primary btn-block">
+          <a  href="/api/sj/all?action=lock" role="button" class="btn btn-primary btn-block">
             Savannah Lock
-          </button>
+          </a>
         </div>
         <div class="row">
-          <button type="button" class="btn btn-success btn-block">
+          <a  href="/api/sj/laptop?action=toggle" role="button" class="btn btn-success btn-block">
             Laptop
-          </button>
+          </a>
         </div>
         <div class="row">
-          <button type="button" class="btn btn-danger btn-block">
+          <a  href="/api/sj/ipad?action=toggle" role="button" class="btn btn-danger btn-block">
             Ipad
-          </button>
+          </a>
         </div>
         <div class="row">
-          <button type="button" class="btn btn-secondary btn-block">
+          <a  href="/api/sj/all?action=unlock" role="button" class="btn btn-secondary btn-block">
             Savannah Unlock
-          </button>
+          </a>
         </div>
       </div>
       <div class="col-1">&nbsp;</div>
       <div class="col-4">
         <div class="row">
-          <button type="button" class="btn btn-primary btn-block">
+          <a  href="/api/cj/all?action=lock" role="button" class="btn btn-primary btn-block">
             Charlie Lock
-          </button>
+          </a>
         </div>
         <div class="row">
-          <button type="button" class="btn btn-success btn-block">
+          <a  href="/api/cj/laptop?action=toggle" role="button" class="btn btn-success btn-block">
             Laptop
-          </button>
+          </a>
         </div>
         <div class="row">
-          <button type="button" class="btn btn-danger btn-block">
+          <a  href="/api/cj/ipad?action=toggle" role="button" class="btn btn-danger btn-block">
             Ipad
-          </button>
+          </a>
         </div>
         <div class="row">
-          <button type="button" class="btn btn-secondary btn-block">
+          <a  href="/api/cj/all?action=unlock" role="button" class="btn btn-secondary btn-block">
             Charlie Unlock
-          </button>
+          </a>
         </div>
       </div>
       <div class="col-1">&nbsp;</div>
